--- a/src/Components/Group/Groupcompstyle.css
+++ b/src/Components/Group/Groupcompstyle.css
@@ -13,14 +13,15 @@
 
 .h1tagofGroupcomp {
   font-family: "Roboto", sans-serif;
+  font-size: 40px;
 }
 
 .circlebutton {
   position: sticky;
   display: flex;
   background-color: #16008b;
-  width: 55px;
-  height: 55px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   text-align: center;
   color: white;
