--- a/src/Components/GroupIcon/Groupstyle.css
+++ b/src/Components/GroupIcon/Groupstyle.css
@@ -34,8 +34,8 @@ p {
 }
 
 .profile-icon {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   background-color: #f0f;
   border-radius: 50%;
   display: flex;
@@ -48,6 +48,7 @@ p {
 
 .profile-container p {
   margin-left: 10px;
+  font-size: 20px;
 }
 
 .group {
